See http://github.com/miyagawa/cpanminus/ for the latest development.

{{$NEXT}}

1.7907  2018-04-26 04:36:02 PDT
   [New Features]
      - Support --no-static-install command line option to disable static install

   [Releng]
      - update URI and Module::CPANfile in fatpack

1.7906  2018-04-25 02:26:16 PDT
   [Releng]
      - Add back App::cpanminus package to fatpack
      - Fatpack from Menlo-Legacy package
      - Put back version number scheme to pre 1.8

1.9018  2018-04-22 15:54:19 CEST
   [New Features]
      - Support x_use_unsafe_inc CPAN Meta experiment (haarg, ether) #535, #536

   [Releng]
      - Remove App::cpanminus::fastscript, favoring Menlo::CLI::Compat

1.9017  2018-04-21 19:30:50 CEST
   [Bug Fixes]
      - Change the log output to say App::cpanminus for downstream consumers such as
        App::cpanminus::reporter

1.9016  2018-04-21 13:17:44 CEST
   [Improvements]
      - Support version in x_static_install (leont)

1.9015  2018-04-21 12:56:30 CEST
   [Improvements]
      - Make static install work out of the box, and require TAP::Harness::Env only
        when tesing is enabled

   [Releng]
      - Synchronize version number with Menlo

1.7905  2018-04-21 11:39:58 CEST
   [Bug Fixes]
      - Fix quoting in commands in Win32 #545
      - Disable static_install when required modules are not installed

1.7904  2018-04-20 23:20:15 CEST
   [New Feaures]
      - Support dist, mirror and url options in cpanfile (#568)

1.7903  2018-04-20 16:53:53 CEST
   [Releng]
      - Update git tag format to identify Menlo and App-cpanminus releases

1.7902  2018-04-20 14:42:09 CEST
   [Bug Fixes]
      - Fix the usage of Menlo::CLI::Compat

1.7901  2018-04-20 14:19:30 CEST
   [Releng]
      - Same as 1.7900. Fixing dzil configuration

1.7900  2018-04-20 14:16:31 CEST
   [Releng]
      - Moved cpanminus core to Menlo

   [Internal]
      - Use CPAN::Common::Index to handle various CPAN index formats
      - Use HTTP::Tinyish to handle various HTTP clients
